# catabra-pandas

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-base  Dockerfile-test  LICENSE  README.md  pyproject.toml
benchmarks/: Merging.ipynb
catabra_pandas/: __init__.py  __version__.py  joining.py  merging.py  misc.py  resampling.py
tests/: test_factorize.py  test_find_containing_interval.py  test_get_loc.py  test_group_intervals.py  test_grouped_mode.py  test_impute.py  test_make_windows.py  test_merge_intervals.py  test_prev_next_values.py  test_resample_eav.py  test_resample_interval.py  util.py
